--- a/views/order.pug
+++ b/views/order.pug
@@ -3,7 +3,7 @@ extends partials/layout.pug
 block content
     .container
       .heading
-        h1 Contact Us
+        h1 Order From Us
       .contact-form
         form(method='POST')
           .form-group
@@ -14,10 +14,16 @@ block content
             input.form-control#email(type='email' name='email' placeholder='you@example.com')
           .form-group
             label(for='phone') Phone Number
-            input.form-control#phone(type='phone' name='phone' placeholder='234-567-8901')
+            input.form-control#phone(type='tel' name='phone' placeholder='234-567-8901')
           .form-group
-            label(for='message') Message
-            textarea.form-control#message(rows=5 name='message' placeholder='What\'s the secret ingredient?')
+            label(for='size') Size
+            select.form-control#size(name='size')
+              option 
+              option(value='10') Small 10"
+              option(value='12') Medium 12"
+              option(value='14') Large 14"
+              option(value='50') Murica 50"
+            .order-form__submit
           .contact-form__submit
             a.btn.btn-danger.btn-lg(href="/") Cancel
             input.btn.btn-success.btn-lg(type='submit' value='Submit')
