--- a/views/order.pug
+++ b/views/order.pug
@@ -1,29 +1,30 @@
 extends partials/layout.pug
 
 block content
-    .container
-      .heading
-        h1 Order From Us
-      .contact-form
-        form(method='POST')
-          .form-group
-            label(for='name') Name
-            input.form-control#name(type='text' name='name' placeholder='John Doe')
-          .form-group
-            label(for='email') Email Address
-            input.form-control#email(type='email' name='email' placeholder='you@example.com')
-          .form-group
-            label(for='phone') Phone Number
-            input.form-control#phone(type='tel' name='phone' placeholder='234-567-8901')
-          .form-group
-            label(for='size') Size
-            select.form-control#size(name='size')
-              option 
-              option(value='10') Small 10"
-              option(value='12') Medium 12"
-              option(value='14') Large 14"
-              option(value='50') Murica 50"
-            .order-form__submit
-          .contact-form__submit
-            a.btn.btn-danger.btn-lg(href="/") Cancel
-            input.btn.btn-success.btn-lg(type='submit' value='Submit')
+  .heading
+    h1 Order
+  .order-form
+    form(method='POST')
+      .form-group
+        label(for='name') Name
+        input.form-control#name(type='text' name='name' placeholder='John Doe')
+      .form-group
+        label(for='email') Email Address
+        input.form-control#email(type='email' name='email' placeholder='you@example.com')
+      .form-group
+        label(for='phone') Phone Number
+        input.form-control#phone(type='tel' name='phone' placeholder='234-567-8901')
+      .form-group
+        label(for='size') Size
+        select.form-control#size(name='size')
+          option Select a size:
+          each size in sizes
+           option(value=size.inches) #{size.name}: #{size.inches}"
+            .form-group
+      label(for='toppings') Toppings
+      select.form-control#toppings(name='toppings' multiple)
+        each topping in toppings
+         option(value=topping.name)= topping.name
+      .order-form__submit
+        a.btn.btn-danger.btn-lg(href='/') Cancel
+        input.btn.btn-success.btn-lg(type='submit' value='Submit')
