moved files around and got ready for heroku hosting

--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -15,3 +15,5 @@ nav.navbar.navbar-inverse.navbar-fixed-top
           a(href='/about') About
         li(class={ active: page === 'Contact' })  
           a(href='/contact') Contact
+        li(class={ active: page === 'Order' })
+          a(href='/order') Order          
